--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -9,7 +9,7 @@ function onStart()
 	<header class="header-section">
 		<div class="container">
 			<!-- logo -->
-			<a href="index.html" class="site-logo"><img src="img/logo.png" alt=""></a>
+			<a href="index.html" class="site-logo"><img src="{{'assets/img/logo.png'|theme }}" alt=""></a>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
 			</div>
