--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -34,8 +34,8 @@
 				<!-- widget -->
 				<div class="col-sm-6 col-lg-3 footer-widget">
 					<div class="about-widget">
-						<img src="{{ 'assets/img/logo-light.png'|theme }}" alt="">
-						<p>orem ipsum dolor sit amet, consecter adipiscing elite. Donec minos varius, viverra justo ut, aliquet nisl.</p>
+						<img src="{% if ( this.theme.company_logo|length > 0 )%}{{ this.theme.company_logo|media }} {% else %}{{ 'assets/img/logo-light.png'|theme }} {% endif %}" alt="logo">
+						<p>{% if ( this.theme.company_logo_description|length > 0 )%}{{ this.theme.company_logo_description }}{% else %} Lorem ipsum dolor sit amet, consecter adipiscing elite. Donec minos varius, viverra justo ut, aliquet nisl.{% endif %}</p>
 						<div class="social pt-1">
 							<a href=""><i class="fa fa-twitter-square"></i></a>
 							<a href=""><i class="fa fa-facebook-square"></i></a>
@@ -83,10 +83,11 @@
 				<div class="col-sm-6 col-lg-3 footer-widget">
 					<h6 class="fw-title">CONTACT</h6>
 					<ul class="contact">
-						<li><p><i class="fa fa-map-marker"></i> 40 Baria Street 133/2, NewYork City,US</p></li>
-						<li><p><i class="fa fa-phone"></i> (+88) 111 555 666</p></li>
-						<li><p><i class="fa fa-envelope"></i> infodeercreative@gmail.com</p></li>
-						<li><p><i class="fa fa-clock-o"></i> Monday - Friday, 08:00AM - 06:00 PM</p></li>
+						<a target="_blank" href="{{this.theme.company_address_url}}"><li><p><i class="fa fa-map-marker"></i> {{this.theme.company_address}}</p></li></a>
+						<a href="tel:{{this.theme.company_work_number}}"><li><p><i class="fa fa-phone"></i> {{this.theme.company_work_number}}</p></li></a>		
+						<a href="tel:{{this.theme.company_work_number}}"><li><p><i class="fa fa-phone"></i> {{this.theme.company_mobile_number}}</p></li></a>						
+						<a href="mailto:{{this.theme.company_email}}"><li><p><i class="fa fa-envelope"></i> {{this.theme.company_email}}</p></li></a>
+						<li><p><i class="fa fa-clock-o"></i> {{ this.theme.company_work_time }}</p></li>
 					</ul>
 				</div>
 			</div>
