--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -9,18 +9,20 @@ function onStart()
 	<header class="header-section">
 		<div class="container">
 			<!-- logo -->
-			<a href="index.html" class="site-logo"><img src="{{'assets/img/logo.png'|theme }}" alt=""></a>
+			<a href="index.html" class="site-logo"><img src="{% if (this.theme.company_logo|length > 0)%}{{this.theme.company_logo|media}} {% else %}{{'assets/img/logo.png'|theme }} {% endif %}" alt="logo"></a>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
 			</div>
 			<div class="header-info">
 				<div class="hf-item">
 					<i class="fa fa-clock-o"></i>
-					<p><span>Working time:</span>Monday - Friday: 08 AM - 06 PM</p>
+					<p><span>Working time:</span>{{ this.theme.company_work_time}}</p>
 				</div>
 				<div class="hf-item">
-					<i class="fa fa-map-marker"></i>
-					<p><span>Find us:</span>40 Baria Street 133/2, New York City, US</p>
+					<a target="_blank" href="{{this.theme.company_address_url}}">
+						<i class="fa fa-map-marker"></i>
+						<p><span>Find us:</span>{{this.theme.company_address}}</p>
+					</a>
 				</div>
 			</div>
 		</div>
