--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -96,7 +96,7 @@
 		<div class="copyright">
 			<div class="container">
 				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy; | Web site developer by <a href="https://skk.kz" target="_blank">SKK.KZ</a>
+Copyright &copy; | Web site developer by <a href="{{this.theme.website_url}}" target="_blank">SKK.KZ</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>		
 		</div>
