--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -28,14 +28,12 @@ function onStart()
 		</div>
 	</header>
 	<!-- header section end-->
-
-
 	<!-- Header section  -->
 	<nav class="nav-section">
 		<div class="container">
-			<div class="nav-right">
+			{# <div class="nav-right">
 				<a href=""><i class="fa fa-search"></i></a>
-			</div>
+			</div> #}
 			<ul class="main-menu">
 				<li class="active"><a href="index.html">Home</a></li>
 				<li><a href="about.html">About Us</a></li>
@@ -47,21 +45,6 @@ function onStart()
 		</div>
 	</nav>
 	<!-- Header section end -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 <!-- Nav -->
 {# <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top navbar-autohide" role="navigation">
