--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -37,11 +37,21 @@
 						<img src="{% if ( this.theme.company_logo|length > 0 )%}{{ this.theme.company_logo|media }} {% else %}{{ 'assets/img/logo-light.png'|theme }} {% endif %}" alt="logo">
 						<p>{% if ( this.theme.company_logo_description|length > 0 )%}{{ this.theme.company_logo_description }}{% else %} Lorem ipsum dolor sit amet, consecter adipiscing elite. Donec minos varius, viverra justo ut, aliquet nisl.{% endif %}</p>
 						<div class="social pt-1">
-							<a href=""><i class="fa fa-twitter-square"></i></a>
-							<a href=""><i class="fa fa-facebook-square"></i></a>
-							<a href=""><i class="fa fa-google-plus-square"></i></a>
-							<a href=""><i class="fa fa-linkedin-square"></i></a>
-							<a href=""><i class="fa fa-rss-square"></i></a>
+						{% if (this.theme.social_twitter|length > 0)%}
+							<a href="{{this.theme.social_twitter}}"><i class="fa fa-twitter-square"></i></a>
+					{# {% else %}
+							<a href=""><i class="fa fa-twitter-square"></i></a> #}
+						{% endif %}
+						{% if (this.theme.social_facebook|length > 0)%}
+							<a href="{{ this.theme.social_facebook }}"><i class="fa fa-facebook-square"></i></a>
+					{# 	{% else %}
+							<a href=""><i class="fa fa-facebook-square"></i></a> #}
+						{% endif %}
+						{% if (this.theme.social_instagram|length > 0)%}
+							<a href="{{ this.theme.social_instagram }}"><i class="fa fa-instagram"></i></a>
+					{# 	{% else %}
+							<a href=""><i class="fa fa-instagram"></i></a> #}
+						{% endif %}
 						</div>
 					</div>
 				</div>
@@ -50,18 +60,10 @@
 					<h6 class="fw-title">USEFUL LINK</h6>
 					<div class="dobule-link">
 						<ul>
-							<li><a href="">Home</a></li>
-							<li><a href="">About us</a></li>
-							<li><a href="">Services</a></li>
-							<li><a href="">Events</a></li>
-							<li><a href="">Features</a></li>
-						</ul>
-						<ul>
-							<li><a href="">Policy</a></li>
-							<li><a href="">Term</a></li>
-							<li><a href="">Help</a></li>
-							<li><a href="">FAQs</a></li>
-							<li><a href="">Site map</a></li>
+							<li><a href="{{ 'home'|page }}">Home</a></li>
+							<li><a href="{{ 'about'|page }}">About us</a></li>
+							<li><a href="{{ 'blog'|page }}">Blog</a></li>
+							<li><a href="{{ 'contact'|page }}">Contacts</a></li>
 						</ul>
 					</div>
 				</div>
@@ -85,7 +87,7 @@
 					<ul class="contact">
 						<a target="_blank" href="{{this.theme.company_address_url}}"><li><p><i class="fa fa-map-marker"></i> {{this.theme.company_address}}</p></li></a>
 						<a href="tel:{{this.theme.company_work_number}}"><li><p><i class="fa fa-phone"></i> {{this.theme.company_work_number}}</p></li></a>		
-						<a href="tel:{{this.theme.company_work_number}}"><li><p><i class="fa fa-phone"></i> {{this.theme.company_mobile_number}}</p></li></a>						
+						<a href="tel:{{this.theme.company_mobile_number}}"><li><p><i class="fa fa-phone"></i> {{this.theme.company_mobile_number}}</p></li></a>						
 						<a href="mailto:{{this.theme.company_email}}"><li><p><i class="fa fa-envelope"></i> {{this.theme.company_email}}</p></li></a>
 						<li><p><i class="fa fa-clock-o"></i> {{ this.theme.company_work_time }}</p></li>
 					</ul>
