--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -9,7 +9,7 @@ function onStart()
 	<header class="header-section">
 		<div class="container">
 			<!-- logo -->
-			<a href="index.html" class="site-logo"><img src="{% if (this.theme.company_logo|length > 0)%}{{this.theme.company_logo|media}} {% else %}{{'assets/img/logo.png'|theme }} {% endif %}" alt="logo"></a>
+			<a href="{{ 'home'|page }}" class="site-logo"><img src="{% if (this.theme.company_logo|length > 0)%}{{this.theme.company_logo|media}} {% else %}{{'assets/img/ptk-logo.jpeg'|theme }} {% endif %}" alt="logo"></a>
 			<div class="nav-switch">
 				<i class="fa fa-bars"></i>
 			</div>
@@ -37,8 +37,8 @@ function onStart()
 			<ul class="main-menu">
 				<li class="{% if this.page.id == 'home' %}active{% endif %}"><a href="{{ 'home'|page }}">Home</a></li>
 				<li class="{% if this.page.id == 'about' %}active{% endif %}"><a href="{{ 'about'|page }}">About us</a></li>
-				<li><a href="#">Event</a></li>
-				<li><a href="course.html">COURSES</a></li>
+{# 				<li><a href="#">Event</a></li>
+				<li><a href="course.html">COURSES</a></li> #}
 				<li class="{% if this.page.id == 'blog' %}active{% endif %}"><a href="{{ 'blog'|page }}">blog</a></li>
 				<li class="{% if this.page.id == 'contact' %}active{% endif %}"><a href="{{ 'contact'|page }}">contact</a></li>
 			</ul>
