--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -34,7 +34,7 @@
 				<!-- widget -->
 				<div class="col-sm-6 col-lg-3 footer-widget">
 					<div class="about-widget">
-						<img src="{% if ( this.theme.company_logo|length > 0 )%}{{ this.theme.company_logo|media }} {% else %}{{ 'assets/img/logo-light.png'|theme }} {% endif %}" alt="logo">
+						<img src="{% if ( this.theme.company_logo|length > 0 )%}{{ this.theme.company_logo|media }} {% else %}{{ 'assets/img/ptk-logo.jpeg'|theme }} {% endif %}" alt="logo">
 						<p>{% if ( this.theme.company_logo_description|length > 0 )%}{{ this.theme.company_logo_description }}{% else %} Lorem ipsum dolor sit amet, consecter adipiscing elite. Donec minos varius, viverra justo ut, aliquet nisl.{% endif %}</p>
 						<div class="social pt-1">
 						{% if (this.theme.social_twitter|length > 0)%}
