--- a/partials/site/footer.htm
+++ b/partials/site/footer.htm
@@ -1,31 +1,13 @@
-{# <div id="footer">
-    <div class="container">
-        <hr />
-        <p class="muted credit">&copy; 2021 - {{ "now" | date("Y") }} <a href="https://wintercms.com" target="_blank">Winter CMS</a>.</p>
-    </div>
-</div>
- #}
-
- 	<!-- Newsletter section -->
-{# 	<section class="newsletter-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-5 col-lg-7">
-					<div class="section-title mb-md-0">
-					<h3>NEWSLETTER</h3>
-					<p>Subscribe and get the latest news and useful tips, advice and best offer.</p>
-				</div>
-				</div>
-				<div class="col-md-7 col-lg-5">
-					<form class="newsletter">
-						<input type="text" placeholder="Enter your email">
-						<button class="site-btn">SUBSCRIBE</button>
-					</form>
-				</div>
-			</div>
-		</div>
-	</section> #}
-	<!-- Newsletter section end -->	
+[blogPosts recent]
+pageNumber = "{{ :page }}"
+categoryFilter = "news"
+postsPerPage = 3
+noPostsMessage = "No posts found"
+sortOrder = "published_at desc"
+categoryPage = "blog"
+postPage = "post"
+==
+{% set recent = recent.posts %}
 
  <!-- Footer section -->
 	<footer class="footer-section">
@@ -39,18 +21,12 @@
 						<div class="social pt-1">
 						{% if (this.theme.social_twitter|length > 0)%}
 							<a href="{{this.theme.social_twitter}}"><i class="fa fa-twitter-square"></i></a>
-					{# {% else %}
-							<a href=""><i class="fa fa-twitter-square"></i></a> #}
 						{% endif %}
 						{% if (this.theme.social_facebook|length > 0)%}
 							<a href="{{ this.theme.social_facebook }}"><i class="fa fa-facebook-square"></i></a>
-					{# 	{% else %}
-							<a href=""><i class="fa fa-facebook-square"></i></a> #}
 						{% endif %}
 						{% if (this.theme.social_instagram|length > 0)%}
 							<a href="{{ this.theme.social_instagram }}"><i class="fa fa-instagram"></i></a>
-					{# 	{% else %}
-							<a href=""><i class="fa fa-instagram"></i></a> #}
 						{% endif %}
 						</div>
 					</div>
@@ -71,14 +47,12 @@
 				<div class="col-sm-6 col-lg-3 footer-widget">
 					<h6 class="fw-title">RECENT POST</h6>
 					<ul class="recent-post">
+					{% for recent in posts %}
 						<li>
-							<p>Snackable study:How to break <br> up your master's degree</p>
-							<span><i class="fa fa-clock-o"></i>24 Mar 2018</span>
+							<p>{{ recent.title }}</p>
+							<span><i class="fa fa-clock-o"></i>{{ recent.published_at|date ('d M Y')}}</span>
 						</li>
-						<li>
-							<p>Open University plans major <br> cuts to number of staff</p>
-							<span><i class="fa fa-clock-o"></i>24 Mar 2018</span>
-						</li>
+					{% endfor %}
 					</ul>
 				</div>
 				<!-- widget -->
@@ -97,9 +71,7 @@
 		<!-- copyright -->
 		<div class="copyright">
 			<div class="container">
-				<p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy; | Web site developer by <a href="{{this.theme.website_url}}" target="_blank">SKK.KZ</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+				<p>Copyright &copy; 2021 - {{ "now" | date("Y") }} | Web site developer by <a href="{{this.theme.website_url}}" target="_blank">SKK.KZ</a></p>
 			</div>		
 		</div>
 	</footer>
