--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -19,7 +19,7 @@ function onStart()
 			<div class="header-info">
 				<div class="hf-item">
 					<i class="fa fa-clock-o"></i>
-					<p><span>{{ 'Рабочее время'|_ }}:</span>{{ this.theme.company_work_time|_ }}</p>
+					<p><span>{{ 'Рабочее время'|_ }}:</span>{{ this.theme.company_work_time }}</p>
 				</div>
 				<div class="hf-item">
 					<a target="_blank" href="{{this.theme.company_address_url}}">
