gallery get url(url+folder) end

--- a/partials/site/header.htm
+++ b/partials/site/header.htm
@@ -41,6 +41,7 @@ function onStart()
 				<li class="{% if this.page.id == 'home' %}active{% endif %}"><a href="{{ 'home'|page }}">{{ 'Главная'|_ }}</a></li>
 				<li class="{% if this.page.id == 'about' %}active{% endif %}"><a href="{{ 'about'|page }}">{{ 'О нас'|_ }}</a></li>
 				<li class="{% if this.page.id == 'blog' %}active{% endif %}"><a href="{{ 'blog'|page }}">{{ 'Блог'|_ }}</a></li>
+				<li class="{% if this.page.id == 'gallery' %}active{% endif %}"><a href="{{ 'gallery'|page }}">{{ 'Галерея'|_ }}</a></li>
 				<li class="{% if this.page.id == 'contact' %}active{% endif %}"><a href="{{ 'contact'|page }}">{{ 'Контакты'|_ }}</a></li>
 			</ul>
 		</div>
